Added HTML tag attributes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
 <body>
     <h1>Multigram</h1>
+    <a href="feed.html">Image Feed</a>
+    <br>
+    <img src="https://static.vecteezy.com/system/resources/previews/005/351/796/original/cactus-on-circle-silhouette-logo-design-modern-flower-vector.jpg"
+        alt="Cactus stock photo for demonstration" height="100px">
 </body>
 
 </html>
