Added semantic HTML tags

--- a/index.html
+++ b/index.html
@@ -8,11 +8,27 @@
 </head>
 
 <body>
-    <h1>Multigram</h1>
-    <a href="feed.html">Image Feed</a>
+    <header>
+        <h1>Multigram</h1>
+    </header>
+    <nav><a href="feed.html">Image Feed</a></nav>
     <br>
-    <img src="https://static.vecteezy.com/system/resources/previews/005/351/796/original/cactus-on-circle-silhouette-logo-design-modern-flower-vector.jpg"
-        alt="Cactus stock photo for demonstration" height="100px">
+    <main>
+        <img src="https://static.vecteezy.com/system/resources/previews/005/351/796/original/cactus-on-circle-silhouette-logo-design-modern-flower-vector.jpg"
+            alt="Cactus stock photo for demonstration" height="100px">
+        <article></article>
+        <aside></aside>
+        <section></section>
+    </main>
+
+    <footer>
+        <div>
+            <p>This is a line of text.</p>
+        </div>
+        <p>My eyes are <span style="color: #557A5E;">green</span>.</p>
+    </footer>
+
+
 </body>
 
 </html>
