Added basic CSS selectors

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 
 <body>
-    <header>
+    <header class="salmon-bg">
         <h1>Multigram</h1>
     </header>
-    <nav><a href="feed.html">Image Feed</a></nav>
+    <nav class="salmon-bg">
+        <a id="orange-bg" href="feed.html">Image Feed</a>
+    </nav>
     <br>
     <main>
         <img src="https://static.vecteezy.com/system/resources/previews/005/351/796/original/cactus-on-circle-silhouette-logo-design-modern-flower-vector.jpg"
