Add CSS flexbox for Multiverse Feed

--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Multigram</title>
+    <title>Multigram Home</title>
 </head>
 
 <body>
     <header class="salmon-bg">
-        <h1>Multigram</h1>
+        <h1>Multigram Home</h1>
     </header>
     <nav class="salmon-bg">
-        <a id="orange-bg" href="feed.html">Image Feed</a>
+        <a id="orange-bg" href="feed.html">Multigram Feed</a>
     </nav>
     <br>
     <main>
         <img src="https://static.vecteezy.com/system/resources/previews/005/351/796/original/cactus-on-circle-silhouette-logo-design-modern-flower-vector.jpg"
-            alt="Cactus stock photo for demonstration" height="100px">
+            alt="Cactus stock photo for demonstration">
         <article></article>
         <aside></aside>
         <section></section>
