--- a/feed.html
+++ b/feed.html
@@ -5,12 +5,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Feed</title>
+    <title>Multigram Feed</title>
 </head>
 
 <body>
-    <h1>Feed</h1>
-    <a href="index.html">Home</a>
+    <h1>Multigram Feed</h1>
+    <nav>
+        <a href="index.html">Multigram Home</a>
+    </nav>
+    <main>
+        <article>
+            <p>Joe Bloggs 1</p>
+            <img src="https://static.vecteezy.com/system/resources/previews/005/351/796/original/cactus-on-circle-silhouette-logo-design-modern-flower-vector.jpg"
+            alt="Cactus stock photo for demonstration">
+            <p>Image Caption 1</p>
+        </article>
+        <article>
+            <p>Joe Bloggs 2</p>
+            <img src="https://static.vecteezy.com/system/resources/previews/005/351/796/original/cactus-on-circle-silhouette-logo-design-modern-flower-vector.jpg"
+            alt="Cactus stock photo for demonstration">
+            <p>Image Caption 2</p>
+        </article>
+        <article>
+            <p>Joe Bloggs 3</p>
+            <img src="https://static.vecteezy.com/system/resources/previews/005/351/796/original/cactus-on-circle-silhouette-logo-design-modern-flower-vector.jpg"
+            alt="Cactus stock photo for demonstration">
+            <p>Image Caption 3</p>
+        </article>
+        <article>
+            <p>Joe Bloggs 4</p>
+            <img src="https://static.vecteezy.com/system/resources/previews/005/351/796/original/cactus-on-circle-silhouette-logo-design-modern-flower-vector.jpg"
+            alt="Cactus stock photo for demonstration">
+            <p>Image Caption 4</p>
+        </article>
+        <article>
+            <p>Joe Bloggs 5</p>
+            <img src="https://static.vecteezy.com/system/resources/previews/005/351/796/original/cactus-on-circle-silhouette-logo-design-modern-flower-vector.jpg"
+            alt="Cactus stock photo for demonstration">
+            <p>Image Caption 5</p>
+        </article>
+        <article>
+            <p>Joe Bloggs 6</p>
+            <img src="https://static.vecteezy.com/system/resources/previews/005/351/796/original/cactus-on-circle-silhouette-logo-design-modern-flower-vector.jpg"
+            alt="Cactus stock photo for demonstration">
+            <p>Image Caption 6</p>
+        </article>
+        <article>
+            <p>Joe Bloggs 7</p>
+            <img src="https://static.vecteezy.com/system/resources/previews/005/351/796/original/cactus-on-circle-silhouette-logo-design-modern-flower-vector.jpg"
+            alt="Cactus stock photo for demonstration">
+            <p>Image Caption 7</p>
+        </article>
+        <article>
+            <p>Joe Bloggs 8</p>
+            <img src="https://static.vecteezy.com/system/resources/previews/005/351/796/original/cactus-on-circle-silhouette-logo-design-modern-flower-vector.jpg"
+            alt="Cactus stock photo for demonstration">
+            <p>Image Caption 8</p>
+        </article>
+    </main>
 </body>
 
 </html>
