Add CSS flexbox for nav

--- a/feed.html
+++ b/feed.html
@@ -12,6 +12,7 @@
     <h1>Multigram Feed</h1>
     <nav>
         <a href="index.html">Multigram Home</a>
+        <a href="https://google.com">Google</a>
     </nav>
     <main>
         <article>
