Add like button functionality

--- a/feed.html
+++ b/feed.html
@@ -20,6 +20,8 @@
             <img src="https://static.vecteezy.com/system/resources/previews/005/351/796/original/cactus-on-circle-silhouette-logo-design-modern-flower-vector.jpg"
             alt="Cactus stock photo for demonstration">
             <p>Image Caption 1</p>
+            <button>Like</button>
+            <p id="count-1">0</p>
         </article>
         <article>
             <p>Joe Bloggs 2</p>
@@ -64,6 +66,7 @@
             <p>Image Caption 8</p>
         </article>
     </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
