--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
     <main>
         <img src="https://static.vecteezy.com/system/resources/previews/005/351/796/original/cactus-on-circle-silhouette-logo-design-modern-flower-vector.jpg"
             alt="Cactus stock photo for demonstration">
-        <article></article>
-        <aside></aside>
-        <section></section>
     </main>
 
     <footer>
@@ -31,7 +28,7 @@
         <p>My eyes are <span style="color: #557A5E;">green</span>.</p>
     </footer>
 
-
+    <script src="script.js"></script>
 </body>
 
 </html>
